# upfiles

./: .gitignore  README.md  start-backend.bat  start-frontend.bat
backend/: Cargo.toml
backend/src/: main.rs
backend/storage/: lomba.db
backend/storage/soal/: daftar_meja.csv
backend/storage/uploads/9bf1f472-d48d-4cfb-8442-2453a13ec625/: Pra Magang - server side.rar
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/peserta/: page.tsx
frontend/src/components/: AdminLogin.tsx  ArchiveViewer.tsx  Timer.tsx  TimerAlert.tsx
frontend/src/lib/: api.ts  types.ts  useWebSocket.ts
