[package]
name = "lomba_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.7"
actix-ws = "0.3"
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
zip = "2"
unrar = "0.5"
futures-util = "0.3"
sanitize-filename = "0.5"
mime_guess = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
jsonwebtoken = "9"
